# rusty_logic_core

./: Cargo.toml  README.md  prog_csv_to_paste
resources/: circuit_libraries.json
resources/circuits/: 16_float_adder.json  16_float_alu.json  Multiplexer_16_x_2_to_1.json  adder_16_gates.json  adder_8.json  adder_8_gates.json  buffer_8_bit.json  clock_a_b.json  computer_alu.json  computer_bus_conn.json  computer_call_stack.json  computer_call_stack_simple.json  computer_control_unit.json  computer_control_unit_simple.json  computer_gpram.json  computer_io.json  computer_prog_mem.json  computer_sequencer.json  computer_sequencer_simple.json  computer_stack.json  computer_toplevel.json  computer_toplevel_flattened.json  copy_paste_test.json  counter.json  d_latch.json  d_latch_reset.json  d_lath.json  equality_8.json  ff_nor.json  ff_nor_flattened.json  flip_flop.json  full_adder.json  latch_8_gates.json  latch_8_tristate_gates.json  max503_mockup.json  speed_test.json  sub_flatten_test.json  test.json  test_2.json  test_backup.json  (+9 more)
resources/test_circuits/: instance_config_test.json  speed_test.json  sub_flatten_test.json  test.json  test_bitwidth.json  test_save.json  test_sub_sub_timing.json  test_sub_timing.json  top_flatten_test.json  top_flatten_test_flattened.json  wasm_test.json
src/: basic_components.rs  builtin_components.rs  circuit_net_computation.rs  graphics.rs  lib.rs  main.rs  resource_interface.rs  simulator.rs  tests.rs  ui.rs
