[package]
name = "rusty_logic"
version = "0.1.0"
edition = "2021"

[features]
default = ["reverse_y"]
reverse_y = []

[dependencies]
eframe = "0.32.0"
nalgebra = {version = "^0.33", features = ["serde-serialize"]}
serde = {version = "1.0.219", features = ["derive", "rc"]}
serde_json = "1.0.140"
common_macros = "0.1.1"
arboard = "3.6.0"
mouse-rs = "0.4.2"