[package]
name = "rusty_logic"
version = "0.1.0"
edition = "2021"

[features]
default = ["reverse_y", "restore_pin_states", "using_filesystem", "using_egui"]
reverse_y = []
restore_pin_states = []
using_egui = ["eframe", "egui_commonmark"]
using_filesystem = []
using_wasm = ["wasm-bindgen"]

[dependencies]
eframe = {version = "0.32.0", optional = true}
nalgebra = {version = "^0.33", features = ["serde-serialize"]}
serde = {version = "1.0.219", features = ["derive", "rc"]}
serde_json = "1.0.140"
common_macros = "0.1.1"
arboard = "3.6.0"
mouse-rs = "0.4.2"
egui_commonmark = {version = "0.21.1", optional = true}
wasm-bindgen = {version = "0.2.104", optional = true}